# Tushar_Datasets

./: .gitignore  README.md  claude.md  main.py  pyproject.toml
1_Melb_housing_data/: 1_basic_data_exploration.ipynb  README.md
1_Melb_housing_data/notebooks/: 01_Initial_Data_Exploration.ipynb  01_exploratory_analysis.ipynb
2_Ifood_data/data/: data_dictionary.md
4_Microsoft_financial_dataset/Problem_statement/: case_brief.md  case_brief_2.md
4_Microsoft_financial_dataset/data/attempt_v1/: microsoft_financial_sample_learning_roadmap.html
4_Microsoft_financial_dataset/notebook/: basic_analysis.ipynb  observations.md  test.md
